--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  color: #61dafb;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.list{
+  list-style: none;
+  
 }
 
 .App-logo {
